[package]
name = "once-array"
version = "0.1.0"
authors = ["Kevin Mehall <km@kevinmehall.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "concurrency"]
description = "Append-only single-writer fixed-capacity vector that can be shared across threads and accessed as a slice"
