[package]
name = "once-array"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "concurrency", "memory-management", "no-std"]
keywords = ["spmc", "broadcast", "lock-free"]
description = "Append-only single-writer fixed-capacity vector that can be shared across threads and accessed as a slice"
repository = "https://github.com/kevinmehall/once-array"
exclude = [".github"]
